<resources>
    <string name="app_name">CarsApp_Week6</string>
    <string name="Maker">Maker</string>
    <string name="Model">Model</string>
    <string name="Seats">Seats</string>
    <string name="Year">Year</string>
    <string name="Color">Color</string>
    <string name="Price">Price</string>
    <string name="Add_car_button">Add your Vehicle</string>
    <string name="imageView2">Vehicle pic</string>
    <string name="address">Address</string>
    <string name="button_reset">Clear Fields</string>
    <string name="load_btn">Load</string>
    <string name="floatingActionButton">+</string>
    <string name="navigation_drawer_open">drawer opens</string>
    <string name="navigation_drawer_close">drawer closes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>