<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/address"
                app:layout_constraintEnd_toStartOf="@+id/address_input"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_title" />

            <EditText
                android:id="@+id/address_input"
                android:layout_width="273dp"
                android:layout_height="45dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/address_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/address_title" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="71dp">

            <TextView
                android:id="@+id/price_title"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Price"
                app:layout_constraintEnd_toStartOf="@+id/price"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Seats_title" />

            <EditText
                android:id="@+id/price"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Price"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/price_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/price_title" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="91dp">

            <TextView
                android:id="@+id/Seats_title"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Seats"
                app:layout_constraintEnd_toStartOf="@+id/Seats"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_title" />

            <EditText
                android:id="@+id/Seats"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Seats"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/Seats_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Seats_title" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="83dp">

            <TextView
                android:id="@+id/model_title"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Model"
                app:layout_constraintEnd_toStartOf="@+id/Model"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maker_title" />

            <EditText
                android:id="@+id/Model"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Model"
                android:inputType="textPersonName"
                android:keyboardNavigationCluster="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/model_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/model_title" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/maker_title"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Maker"
                app:layout_constraintEnd_toStartOf="@+id/Maker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Maker"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Maker"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/maker_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/maker_title" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <TextView
                android:id="@+id/color_title"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"

                android:text="@string/Color"
                app:layout_constraintEnd_toStartOf="@+id/color"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/year_title" />

            <EditText
                android:id="@+id/color"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Color"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/color_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/color_title" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/year_title"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Year"
                app:layout_constraintEnd_toStartOf="@+id/Year"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/model_title" />

            <EditText
                android:id="@+id/Year"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Year"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/year_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/year_title" />

        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>